%% Figure 4.1 v3 — corrected relationships (Review, Stripe, admin_role)
%% database/schema.sql

classDiagram
    direction TB

    class User {
        id
        name
        email
        password
        role
        email_verified
        created_at
    }

    class Patient {
        id
        user_id
        phone
        date_of_birth
        address
        general_health
    }

    class Doctor {
        id
        user_id
        specialization
    }

    class Admin {
        id
        user_id
        admin_role
    }

    class MedicalRecord {
        id
        patient_id
        skin_type
        allergies
        notes
        updated_at
    }

    class Appointment {
        id
        patient_id
        doctor_id
        date
        time
        status
        treatment_category
    }

    class TreatmentSession {
        id
        appointment_id
        session_price
        amount_paid
        notes
        created_at
        updated_at
    }

    class Review {
        id
        patient_id
        appointment_id
        rating
        status
        created_at
    }

    class Message {
        id
        sender_id
        receiver_id
        message
        created_at
    }

    class Order {
        id
        patient_id
        total_price
        status
        payment_status
        stripe_checkout_session_id
        created_at
    }

    class OrderItem {
        id
        order_id
        product_id
        quantity
        price
    }

    class Product {
        id
        name
        description
        short_description
        category
        price
        discount_percentage
        stock
        low_stock_threshold
        image_url
        is_active
    }

    class ProductStockAdjustment {
        id
        product_id
        delta
        created_by_user_id
        created_at
    }

    class StripeWebhookEvent {
        stripe_event_id
        created_at
    }

    note for Admin "Logical entity — stored as Users.role=admin\n+ Users.admin_role in MySQL"

    User "1" --> "0..1" Patient
    User "1" --> "0..1" Doctor
    User "1" --> "0..1" Admin

    Patient "1" --> "0..1" MedicalRecord
    Patient "1" --> "*" Appointment
    Doctor "1" --> "*" Appointment
    Appointment "1" --> "0..1" TreatmentSession

    Patient "1" --> "*" Review : writes
    Appointment "1" --> "0..1" Review : one per visit

    Patient "1" --> "*" Order
    Order "1" --> "*" OrderItem
    Product "1" --> "*" OrderItem
    Product "1" --> "*" ProductStockAdjustment

    Admin "1" --> "*" Product : manages
    Admin "1" --> "*" Order : manages
    Admin "1" --> "*" ProductStockAdjustment

    User "1" --> "*" Message : sender
    User "1" --> "*" Message : receiver

    Order "1" ..> "*" StripeWebhookEvent : payment fulfilled for
